k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tradegateway
  labels:
    app.kubernetes.io/name: tradegateway
    app.kubernetes.io/part-of: ngswtp
