k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradegateway-app
  namespace: tradegateway
  labels:
    app: tradegateway-app
spec:
  type: ClusterIP
  selector:
    app: tradegateway-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
